# sentinel

./: .gitignore  =1.3.2  CLAUDE.md  README.md  REVIEW-alert-notification-fix.md  app.py  pyproject.toml  requirements.txt
.claude/plans/: 2026-06-25-compare-polish-phases-2-4.md  2026-06-25-known-gaps-cleanup.md
.github/workflows/: deploy-backend.yml  deploy-daemon.yml  deploy-frontend.yml  keep-alive.yml
deploy/: README.md  install-daemon.sh  nginx-sentinel.conf  sentinel-api.service  sentinel-daemon.service  sentinel-web.service  update-daemon.sh
docs/: 2026-06-22-deploy-config-alignment-design.md  2026-06-24-daemon-reconciliation-fix-design.md  mobile-user-guide.md
implements/: 2026-06-25-finnhub-rest-integration-design.md  PRICE_FEED_PLAN.md  PRICE_FEED_REPORT.md
scripts/: daemon.sh  generate_vapid_keys.py
src/api/: server.py
src/cli/: sentinel_notify.py
src/data/: auth_db.py  company_links.json  company_links.py  country_risk.json  fetcher.py  finnhub_rest.py  notification_db.py  openbb_fetcher.py  push_db.py  remote_db.py  sec_edgar.py  sector_universe.json  sector_universe.py  supply_chain_data.py  watchlist_db.py  (+1 more)
systemd/: sentinel-daemon.service
tests/: conftest.py  helpers.py  test_api.py  test_checker.py  test_custom_alerts.py  test_daemon.py  test_finnhub_rest.py  test_idor.py  test_news_tracker.py  test_notification_db.py  test_options_api.py  test_price_feed.py  test_telegram_bot.py  test_ticker_fetcher.py
web/: .env.local.example  .gitignore  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
(+156 files in other folders)
