[project]
name = "sentinel"
version = "0.1.0"
description = "Fundamental Analysis Dashboard — Made Simple. Type a ticker, get plain-English answers."
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "yfinance>=0.2.30",
    "plotly>=5.17.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "fpdf2>=2.8.7",
    "lxml>=6.1.1",
]

[project.scripts]
sentinel = "app:main"

[dependency-groups]
dev = []
