[project]
name = "sentinel"
version = "0.1.0"
description = "Fundamental Analysis Dashboard — Made Simple. Type a ticker, get plain-English answers."
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "yfinance>=0.2.30",
    "openbb>=4.7.0",
    "plotly>=5.17.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "fpdf2>=2.8.7",
    "lxml>=6.1.1",
    "apscheduler>=3.10.0",
    "sqlalchemy>=2.0.0",
    "Authlib>=1.3.2",
]

[project.scripts]
sentinel = "app:main"
sentinel-daemon = "src.notifications.daemon:main"

[dependency-groups]
dev = []
